Added unit tests to CatNews

--- a/CatNews.xcodeproj/xcshareddata/xcschemes/CatNews.xcscheme
+++ b/CatNews.xcodeproj/xcshareddata/xcschemes/CatNews.xcscheme
@@ -26,7 +26,25 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6FD91486257EB85100D9765A"
+            BuildableName = "CatNews.app"
+            BlueprintName = "CatNews"
+            ReferencedContainer = "container:CatNews.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CatNewsCore"
+            BuildableName = "CatNewsCore"
+            BlueprintName = "CatNewsCore"
+            ReferencedContainer = "container:Packages/CatNewsCore">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
